--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-native-picker/picker": "^2.11.1",
     "@react-navigation/bottom-tabs": "^7.4.6",
     "@react-navigation/native": "^7.1.17",
     "expo": "~53.0.22",
@@ -16,7 +18,8 @@
     "lucide-react": "^0.542.0",
     "lucide-react-native": "^0.542.0",
     "react": "19.0.0",
-    "react-native": "0.79.6"
+    "react-native": "0.79.6",
+    "react-native-chart-kit": "^6.12.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
