--- a/package.json
+++ b/package.json
@@ -10,16 +10,19 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-native-community/datetimepicker": "^8.4.4",
     "@react-native-picker/picker": "^2.11.1",
     "@react-navigation/bottom-tabs": "^7.4.6",
     "@react-navigation/native": "^7.1.17",
+    "@react-navigation/native-stack": "^7.3.26",
     "expo": "~53.0.22",
     "expo-status-bar": "~2.2.3",
     "lucide-react": "^0.542.0",
     "lucide-react-native": "^0.542.0",
     "react": "19.0.0",
     "react-native": "0.79.6",
-    "react-native-chart-kit": "^6.12.0"
+    "react-native-chart-kit": "^6.12.0",
+    "react-native-image-picker": "^8.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
