--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "react": "19.0.0",
     "react-native": "0.79.6",
     "react-native-chart-kit": "^6.12.0",
+    "react-native-fs": "^2.20.0",
+    "react-native-html-to-pdf": "^0.12.0",
     "react-native-image-picker": "^8.2.1"
   },
   "devDependencies": {
