--- a/package.json
+++ b/package.json
@@ -9,25 +9,28 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-native-async-storage/async-storage": "2.2.0",
     "@react-native-community/datetimepicker": "^8.4.4",
-    "@react-native-picker/picker": "^2.11.1",
+    "@react-native-picker/picker": "2.11.1",
     "@react-navigation/bottom-tabs": "^7.4.6",
     "@react-navigation/native": "^7.1.17",
     "@react-navigation/native-stack": "^7.3.26",
-    "expo": "~53.0.22",
-    "expo-status-bar": "~2.2.3",
+    "expo": "^54.0.0",
+    "expo-image-picker": "~17.0.8",
+    "expo-print": "~15.0.7",
+    "expo-sharing": "~14.0.7",
+    "expo-status-bar": "~3.0.8",
     "lucide-react": "^0.542.0",
     "lucide-react-native": "^0.542.0",
-    "react": "19.0.0",
-    "react-native": "0.79.6",
+    "react": "19.1.0",
+    "react-native": "^0.81.4",
     "react-native-chart-kit": "^6.12.0",
     "react-native-fs": "^2.20.0",
-    "react-native-html-to-pdf": "^0.12.0",
-    "react-native-image-picker": "^8.2.1"
+    "react-native-html-to-pdf": "^1.3.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "@react-native-community/cli": "^20.0.2"
   },
   "private": true
 }
