--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-navigation/native-stack": "^7.3.26",
     "date-fns": "^4.1.0",
     "expo": "^54.0.0",
+    "expo-image-manipulator": "~14.0.7",
     "expo-image-picker": "~17.0.8",
     "expo-print": "~15.0.7",
     "expo-sharing": "~14.0.7",
