--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "saleshub",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "main": "index.js",
   "scripts": {
     "start": "expo start",
@@ -21,6 +21,7 @@
     "expo-image-picker": "~17.0.8",
     "expo-print": "~15.0.7",
     "expo-sharing": "~14.0.7",
+    "expo-sqlite": "~15.0.3",
     "expo-status-bar": "~3.0.8",
     "lucide-react": "^0.542.0",
     "lucide-react-native": "^0.542.0",
